# nowdock-plasmoid

./: .gitignore  CMakeLists.txt  README.md  install-global.sh  install-local.sh  main.qml  metadata.desktop  metadata.desktop.template  uninstall-local.sh
contents/code/: activitiesTools.js  layout.js  tools.js
contents/config/: config.qml  main.xml
contents/ui/: CircleText.qml  ConfigAppearance.qml  ConfigGeneral.qml  ConfigInteraction.qml  ConfigPanel.qml  ContextMenu.qml  GlowPoint.qml  IconsModel.qml  MouseHandler.qml  TaskActiveItem.qml  TaskDelegate.qml  TaskGroupItem.qml  TaskIconBuffers.qml  TaskIconItem.qml  TaskProgressOverlay.qml  TaskWindows.qml  ToolTipDelegate.qml  ToolTipWindowMouseArea.qml  main.qml
nowdockplasmoid/: metadata.desktop
nowdockplasmoid/contents/config/: main.xml
nowdockplasmoid/contents/ui/: ConfigAppearance.qml  ConfigInteraction.qml  ContextMenu.qml  GroupDialog.qml  TaskDelegate.qml  TaskGroupItem.qml  TaskIconItem.qml  TaskList.qml  TaskWindows.qml  ToolTipDelegate.qml  VisualAddItem.qml  main.qml
po/: Messages.sh  el.po  pl.po  plasma_applet_org.kde.store.nowdock.plasmoid.pot  update-metadata.sh  zh_TW.po
